fix(loader): make loader more visible

--- a/src/adapter/templates/fragments/bottom-bar/styles.css
+++ b/src/adapter/templates/fragments/bottom-bar/styles.css
@@ -87,7 +87,7 @@
   top: 0;
   right: 0;
   height: 2px;
-  width: calc(200% + 10px);
+  width: 200%;
   background: none;
 }
 
@@ -95,11 +95,12 @@
   background-image: linear-gradient(
     90deg,
     var(--primary-dd) 0%,
-    var(--primary-dd) calc(50% - 3 * var(--base) * var(--padding)),
-    var(--secondary1) 50%,
-    var(--primary-dd) 50%
+    var(--secondary1) 25%,
+    var(--primary-dd) 50%,
+    var(--secondary1) 75%,
+    var(--primary-dd) 100%
   );
-  animation: slide 2s linear infinite;
+  animation: slide 1s linear infinite;
 }
 
 @keyframes slide {
@@ -107,6 +108,6 @@
     transform: translateX(0%);
   }
   to {
-    transform: translateX(calc(50% + 10px));
+    transform: translateX(50%);
   }
 }
